# utils

./: .gitignore  README.md  pyproject.toml
logging/: AUDIT_REPORT.md  README.md  pyproject.toml
logging/docs/: DOCUMENTATION_PLAN.md  README.md  advanced-features.md  api-reference.md  architecture.md  configuration.md  usage-guide.md
logging/docs/api/: logger.md
logging/docs/architecture/: components.md  design_patterns.md  overview.md
logging/docs/guides/: getting_started.md
logging/docs/helpers/: INTERACTIVE_PROMPT.md  INVESTIGATION_NOTES.md  README.md  REQUIREMENTS_CHECKLIST.md  SESSION_SUMMARY.md
logging/src/rich_logging/: __init__.py  log.py  presets.py
logging/src/rich_logging/core/: __init__.py  configurator.py  log_types.py  utils.py
logging/src/rich_logging/formatters/: __init__.py  base.py  colored.py  rich.py
logging/src/rich_logging/handlers/: __init__.py  base.py  console.py  file.py  file_settings.py  rich_settings.py
logging/src/rich_logging/rich/: __init__.py  rich_console_manager.py  rich_feature_settings.py  rich_logger.py
logging/tests/: TEST_SUMMARY.md  __init__.py  conftest.py  integration_test.py  interactive_demo.py  run_tests.py  test_rich_features.py  test_rich_interactive.py
logging/tests/contract/: __init__.py  test_log_api.py  test_log_level_utils.py  test_rich_logger_api.py
logging/tests/integration/: __init__.py  test_logger_lifecycle.py  test_rich_features.py
logging/tests/unit/: __init__.py  test_formatter_factory.py
package-manager/: AI_AUDIT_PLAYBOOK_TESTS_DOCS_FOUNDATION.md  ANSWERS_TO_QUESTIONS.md  CLAUDE_TESTS_FIRST_DOCUMENTATION_GUIDELINES.md  TEST_PLAN.md  pyproject.toml
package-manager/docs/: README.md  api_reference.md  arch-partial-upgrades.md  architecture.md  examples.md  overview.md  troubleshooting.md  usage_guide.md
package-manager/tests/: __init__.py  conftest.py  test_apt.py  test_base.py  test_dnf.py  test_factory.py  test_pacman.py  test_paru.py  test_types.py  test_yay.py
pipeline/: .gitignore  Makefile  README.md  pyproject.toml
pipeline/docs/: GRANULAR_PROGRESS.md  README.md
pipeline/examples/: demo_granular_progress.py  demo_parallel_progress.py  demo_realtime_progress.py
pipeline/tests/: COMPREHENSIVE_TEST_SUITE_SUMMARY.md  TEST_BATCH_1_SUMMARY.md  conftest.py  (+8 more)
(+89 files in other folders)
